--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="utf-8"/>
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
@@ -15,6 +15,8 @@
         <title>your blog</title>
     </head>
     <body>
+        <div id="modal"></div>
         <div id="root"></div>
+
     </body>
 </html>
